API for ad filtered added
